make waybar opaque again

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -21,7 +21,7 @@
   }
 
 window#waybar {
-    background: rgba(0, 0, 0, 0.85);
+    background: rgba(0, 0, 0);
     /* background: transparent; */
 }
 
