--- a/.config/swaync/presets/preset-0.css
+++ b/.config/swaync/presets/preset-0.css
@@ -1,8 +1,12 @@
+/*
+ * vim: ft=less 
+ */
+
 @define-color border-color rgb(7, 7, 7);
-@define-color bg rgba(0, 0, 0, 0.50);
-@define-color bg-hover rgba(0, 0, 0, 0.70);
+@define-color bg rgb(58, 58, 58);
+@define-color bg-hover rgb(68, 68, 68);
 @define-color bg-focus rgba(255, 255, 255, 0.07);
-@define-color bg-selected rgba(255, 255, 255, 0.50);
+@define-color bg-selected rgb(0, 128, 255);
 
 .notification-row {
   outline: none;
@@ -13,11 +17,10 @@
 }
 
 .notification {
-  border: none;
-  border-radius: 20px;
+  border-radius: 3px;
   margin: 6px 6px;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.3);
-  padding: 2px;
+  padding: 0;
 }
 
 .notification-content {
@@ -121,24 +124,22 @@
   background: @bg-hover;
 }
 
-/* Controls the DnD switch */
 .control-center-dnd {
-  border-radius: 10px;
-  background: rgba(110, 110, 110, 0.50);
+  border-radius: 3px;
+  background: @bg;
   border: 1px solid @border-color;
   box-shadow: none;
 }
 
 .control-center-dnd:checked {
-  background: rgba(255, 255, 255, 0.50);
+  background: @bg-selected;
 }
 .control-center-dnd slider {
   background: @bg-hover;
 }
 
 .control-center {
-  background-color: rgba (0, 0, 0, 0.9);
-  border-radius: 10px;
+  background-color: rgba (20, 20, 20, 0.95);
 }
 .control-center-list {
   background: transparent;
