--- a/.config/swaync/presets/preset-3.css
+++ b/.config/swaync/presets/preset-3.css
@@ -1,8 +1,12 @@
+/*
+ * vim: ft=less
+ */
+
 @define-color border-color rgb(7, 7, 7);
-@define-color bg rgba(0, 0, 0, 0.50);
-@define-color bg-hover rgba(0, 0, 0, 0.70);
+@define-color bg #37233e;
+@define-color bg-hover #47334e;
 @define-color bg-focus rgba(255, 255, 255, 0.07);
-@define-color bg-selected rgba(255, 255, 255, 0.50);
+@define-color bg-selected rgb(0, 128, 255);
 
 .notification-row {
   outline: none;
@@ -13,17 +17,16 @@
 }
 
 .notification {
-  border: none;
-  border-radius: 20px;
+  border-radius: 0px;
   margin: 6px 6px;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.3);
-  padding: 2px;
+  padding: 0;
 }
 
 .notification-content {
   background: transparent;
   padding: 6px;
-  border-radius: 3px;
+  border-radius: 0px;
 }
 
 .close-button {
@@ -54,7 +57,7 @@
 }
 
 .notification-default-action {
-  border-radius: 3px;
+  border-radius: 0px;
 }
 
 /* When alternative actions are visible */
@@ -84,7 +87,7 @@
 .body-image {
   margin-top: 6px;
   background-color: white;
-  border-radius: 3px;
+  border-radius: 0px;
 }
 
 .summary {
@@ -115,30 +118,28 @@
   background: @bg;
   border: 1px solid @border-color;
   box-shadow: none;
-  border-radius: 3px;
+  border-radius: 0px;
 }
 .control-center-clear-all:hover {
   background: @bg-hover;
 }
 
-/* Controls the DnD switch */
 .control-center-dnd {
-  border-radius: 10px;
-  background: rgba(110, 110, 110, 0.50);
+  border-radius: 0px;
+  background: @bg;
   border: 1px solid @border-color;
   box-shadow: none;
 }
 
 .control-center-dnd:checked {
-  background: rgba(255, 255, 255, 0.50);
+  background: @bg-selected;
 }
 .control-center-dnd slider {
   background: @bg-hover;
 }
 
 .control-center {
-  background-color: rgba (0, 0, 0, 0.9);
-  border-radius: 10px;
+  background-color: rgba (20, 1, 21, 0.9);
 }
 .control-center-list {
   background: transparent;
