--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -49,12 +49,18 @@
   border: 1px solid @border-color;
 }
 
-.notification-default-action:hover,
-.notification-action:hover {
+/* Notification when it is hovered on */
+.notification-default-action:hover {
   background: @bg-hover;
 }
 
+.notification-action:hover {
+  /* background: rgba(0, 255, 0, 0.5) */
+}
+
+/* Notification when it appears initially */
 .notification-default-action {
+  /* background: rgba(0, 0, 255, 0.5); */
   border-radius: 3px;
 }
 
@@ -142,6 +148,7 @@
 .control-center {
   background-color: rgba (0, 0, 0, 0.9);
   border-radius: 10px;
+  box-shadow: 2px 3px 3px 2px rgba(255, 255, 255, 0.25);
 }
 .control-center-list {
   background: transparent;
