--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,67 +1,103 @@
-@define-color border-color rgb(7, 7, 7);
-@define-color bg rgba(0, 0, 0, 0.50);
-@define-color bg-hover rgba(0, 0, 0, 0.70);
-@define-color bg-focus rgba(255, 255, 255, 0.07);
-@define-color bg-selected rgba(255, 255, 255, 0.50);
+/*
+ * vim: ft=less
+ */
+
+@define-color cc-bg rgba(0, 0, 0, 0.9);
+@define-color noti-border-color rgba(255, 255, 255, 0.88);
+@define-color noti-bg rgba(0, 0, 0, 0.80);
+@define-color border2 #101726;
+@define-color noti-bg2 #1d2021;
+@define-color noti-exit rgba(230, 230, 230, 0.88);
+@define-color noti-bg-hover #94e2d5;
+@define-color noti-bg-focus transparent;
+@define-color noti-close-bg rgba(255, 255, 255, 0.0);
+@define-color noti-close-bg-hover rgba(255, 255, 255, 0.0);
+@define-color text rgba(230, 230, 230, 0.88);
+@define-color slider rgba(230, 230, 230, 0.88);
+@define-color bg-selected rgba(137, 220, 235, 0.5);
 
 .notification-row {
   outline: none;
 }
 
+.notification-row:focus,
 .notification-row:hover {
-  background: @bg-focus;
+  background: @noti-bg-focus;
 }
 
 .notification {
-  background: rgba(0, 0, 0, 0.75);
   border-radius: 10px;
-  margin: 6px 6px;
-  box-shadow: 0px 2px 4px 2px rgba(255, 255, 255, 0.3);
-  padding: 2px;
+  border: 2px solid @noti-border-color;
+  margin: 6px 12px;
+
+  padding: 0;
 }
+
+/* Uncomment to enable specific urgency colors
+.low {
+  background: yellow;
+  padding: 6px;
+  border-radius: 12px;
+}
+
+.normal {
+  background: green;
+  padding: 6px;
+  border-radius: 12px;
+}
+
+.critical {
+  background: red;
+  padding: 6px;
+  border-radius: 12px;
+}
+*/
 
 .notification-content {
   background: transparent;
   padding: 6px;
-  border-radius: 3px;
+  border-radius: 10px;
+  border: 2px solid transparent;
 }
 
 .close-button {
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
+  background: @noti-close-bg;
+  color: @noti-exit;
   text-shadow: none;
-  padding: 0px;
-  box-shadow: 2px 6px 6px 2px rgba(0, 0, 0, 0.3);
-  border-radius: 100%;
+  padding: 0 4px;
+  border-radius: 4px;
+  margin-top: 10px;
+  margin-right: 16px;
+  box-shadow: none;
 }
+
 .close-button:hover {
-  background: rgb(30, 30, 30);
+  box-shadow: none;
+  background: @noti-close-bg-hover;
   transition: all 0.15s ease-in-out;
 }
 
 .notification-default-action,
-
 .notification-action {
-  padding: 4px;
+  padding: 0px;
   margin: 0;
+  border-radius: 10px;
   box-shadow: none;
-  background: @bg;
-  border: 1px solid @border-color;
+  background: @noti-bg;
+  
+  border: 2px solid transparent;
 }
 
-/* Notification when it is hovered on */
-.notification-default-action:hover {
-  background: @bg-hover;
-}
-
+.notification-default-action:hover,
 .notification-action:hover {
-  /* background: rgba(0, 255, 0, 0.5) */
+  -gtk-icon-effect: none;
+  
+  color: #11111b;
 }
 
-/* Notification when it appears initially */
 .notification-default-action {
-  /* background: rgba(0, 0, 255, 0.5); */
-  border-radius: 3px;
+  border-radius: 10px;
+  color: #11111b;
 }
 
 /* When alternative actions are visible */
@@ -71,88 +107,92 @@
 }
 
 .notification-action {
-  border-radius: 0px;
+  border-radius: 10px;
   border-top: none;
   border-right: none;
+  color: #11111b;
 }
 
 /* add bottom border radius to eliminate clipping */
 .notification-action:first-child {
   border-bottom-left-radius: 10px;
 }
+
 .notification-action:last-child {
   border-bottom-right-radius: 10px;
-  border-right: 1px solid @border-color;
+  border-right: 1px solid @noti-border-color;
+  color: #11111b;
 }
 
-.image {
-}
+.image {}
 
 .body-image {
   margin-top: 6px;
-  background-color: white;
-  border-radius: 3px;
+  background-color: @text;
+  border-radius: 12px;
 }
 
 .summary {
-  color: white;
+  color: @text;
   text-shadow: none;
 }
 
 .time {
-  color: white;
+  color: @text;
   text-shadow: none;
+  margin-right: 18px;
 }
 
 .body {
   background: transparent;
-  color: white;
+  color: @text;
   text-shadow: none;
 }
 
 .top-action-title {
-  color: #eee;
+  color: @text;
   text-shadow: none;
-  padding: 10px
 }
 
 .control-center-clear-all {
-  color: white;
+  color: @text;
+  padding: 7px;
   text-shadow: none;
-  background: @bg;
-  border: 1px solid @border-color;
+  background: @cc-bg;
+  border: 2px solid @noti-border-color;
   box-shadow: none;
-  border-radius: 3px;
+  border-radius: 8px;
 }
 
 .control-center-clear-all:hover {
-  background: @bg-hover;
+  color: #11111b;
+  background-color: @noti-border-color;
 }
 
-/* Controls the DnD switch */
 .control-center-dnd {
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.50);
-  border: 1px solid @border-color;
+  border-radius: 20px;
+  background: @noti-bg2;
+  border: 2px solid @noti-border-color;
   box-shadow: none;
 }
 
 .control-center-dnd:checked {
-  background: rgba(255, 255, 255, 0.50);
+  background: @noti-bg;
 }
+
 .control-center-dnd slider {
-  
-  background: @bg-hover;
+  background: @noti-border-color;
+  border-radius: 20px;
+  border: 2px solid @border2;
 }
 
 .control-center {
-  background-color: rgba (0, 0, 0, 0.9);
-  border-radius: 10px;
-  box-shadow: 2px 3px 3px 2px rgba(255, 255, 255, 0.25);
+  background: @cc-bg;
+  margin-bottom: 50;
 }
+
 .control-center-list {
   background: transparent;
-  padding: 6px
 }
 
 .floating-notifications {
