--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,24 +2,24 @@
     border: none;
     font-family: "JetbrainsMono Nerd Font" ;
     font-size: 14px;
-    color: #eeeeee;
-    border-radius: 20px; /* Controls Rounding */
+    color: #eeeeee; 
+    border-radius: 12px; /* Controls Rounding */
 }
 
 #window {
     /*font-weight: bold;*/
-    margin-top: 6px;
+    margin-top: 2px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 0px;
+    padding-bottom: 2px;
     border-radius: 8px;
     transition: none;
 
   }
 
 window#waybar {
-    background: rgba(0, 0, 0, 1);
-    padding: 2px 2px;
+    background: #060606;
+    padding: 2px 2px 2px 0px;
     /* background: transparent; */
 }
 
@@ -33,27 +33,24 @@ window#waybar.hidden {
 
 /*-----module groups----*/
 .modules-right {
-	background: #000000;
     /* margin: 0 -12px 0 0; */
     padding-right:7px;
     margin: 4px;
 }
 
 .mnodules-center {
-	background-color: rgba(8,8,8,0.85);
     /* background: transparent; */
     margin: 0 0 0 0;
 
 }
 
 .modules-left {
-	background: #000000;
     /* margin: 0 -12px 0 0; */
     padding-left:7px;
 }
 
 tooltip {
-  background: #323437;
+  background: #060606;
   color: #ffffff;
   border-radius: 10;
 }
